fix index.js bug

--- a/views/index.html
+++ b/views/index.html
@@ -107,4 +107,32 @@
 
 </body>
 
+<script>
+
+    $('.down-arrow-aepps').hover(function () {
+        $('.ui-search-select-list-aepps').show();
+    }, function () {
+        $('.ui-search-select-list-aepps').hide();
+    });
+
+    $('.ui-search-select-list-aepps').hover(function () {
+        $('.ui-search-select-list-aepps').show();
+    }, function () {
+        $('.ui-search-select-list-aepps').hide();
+    });
+
+    $('.down-arrow-zoology').hover(function () {
+        $('.ui-search-select-list-zoology').show();
+    }, function () {
+        $('.ui-search-select-list-zoology').hide();
+    });
+
+    $('.ui-search-select-list-zoology').hover(function () {
+        $('.ui-search-select-list-zoology').show();
+    }, function () {
+        $('.ui-search-select-list-zoology').hide();
+    });
+
+</script>
+
 </html>
