--- a/views/index_mobile.html
+++ b/views/index_mobile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="../static/img/favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="../static/css/index_mobile.css">
+    <script type="text/javascript" src="../static/js/"></script>
     <script type="text/javascript" src="../static/js/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="../static/js/sweetalert.min.js"></script>
     <script type="text/javascript" src="http://www.gongjuji.net/Content/files/jquery.md5.js"></script>
