--- a/static/css/tokens_detail.css
+++ b/static/css/tokens_detail.css
@@ -7,7 +7,117 @@
 body {
     width: 100%;
     height: 100%;
+}
 
+.bg {
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    overflow: hidden;
+    background: #1F9CFF;
+}
+
+.bg .bg1 {
+    height: 110px;
+    z-index: -1;
+    left: 47px;
+    top: 588px;
+    position: absolute;
+}
+
+
+.bg .bg2 {
+    width: 45px;
+    height: 45px;
+    top: 150px;
+    left: 544px;
+    z-index: -1;
+    position: absolute;
+}
+
+.bg .bg3 {
+    width: 174px;
+    height: 174px;
+    z-index: -1;
+    top: 203px;
+    right: 189px;
+    position: absolute;
+}
+
+.bg .bg4 {
+    width: 25px;
+    height: 25px;
+    z-index: -1;
+    top: 506px;
+    right: 348px;
+    position: absolute;
+}
+
+.bg5 {
+    width: 589px;
+    height: 352px;
+    z-index: -1;
+    top: 301px;
+    right: -290px;
+    position: absolute;
+    background-image: linear-gradient(129deg, #E71766 0%, #FF4D90 100%);
+    border-radius: 83px 0px 0px 83px;
+}
+
+.bg6 {
+    width: 589px;
+    height: 352px;
+    z-index: -1;
+    top: 301px;
+    right: -290px;
+    position: absolute;
+    background-image: linear-gradient(129deg, #FF4D90 0%, #FF4D90 100%);
+    border-radius: 83px 0px 0px 83px;
+}
+
+.bg .bg6 {
+    width: 184px;
+    height: 17px;
+    z-index: -1;
+    opacity: 0.1;
+    top: 260px;
+    background-image: linear-gradient(-39deg, #FF4D90 0%, #FF4D90 100%);
+    left: 160px;
+    position: absolute;
+}
+
+.bg .bg7 {
+    width: 17px;
+    height: 17px;
+    z-index: -1;
+    top: 434px;
+    right: 614px;
+    opacity: 0.9;
+    transform: rotate(169deg);
+    background: #50E3C2;
+    border-radius: 17px;
+    position: absolute;
+}
+
+.bg .bg8 {
+    width: 32px;
+    height: 32px;
+    z-index: -1;
+    top: 589px;
+    right: 754px;
+    transform: rotate(169deg);
+    background: #19A3FF;
+    position: absolute;
+    border-radius: 32px;
+}
+
+
+.header {
+    z-index: 999;
+}
+
+.header img {
+    width: 100%;
 }
 
 .div-bg {
@@ -27,40 +137,13 @@ body {
 }
 
 
-.bg {
-    transform: rotate(-40deg);
-    background-image: linear-gradient(116deg, #5E3AFF 0%, #F7296E 50%);
-    border-radius: 463px;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    right: -40%;
-    top: -65%;
-
-    box-shadow: -30px 0px 10px rgba(0, 0, 0, 0.1);
-
-}
-
-
-.body {
-    width: 1200px;
-    height: 100%;
-    margin: auto;
-}
-
-.header {
-    width: 100%;
-    height: 80px;
-    overflow: hidden;
-}
-
 .header .logo {
     width: 200px;
     line-height: 80px;
     float: left;
     font-size: 22px;
+    z-index: 1;
     font-weight: bold;
-    z-index: -1;
     margin-left: 5px;
     font-family: Roboto-Black, serif;
 }
@@ -70,20 +153,22 @@ body {
     height: 100px;
     margin-top: -10px;
     margin-left: -20px;
-    z-index: -1;
 }
 
 
 .header .menu {
-    height: 80px;
+    height: 150px;
     float: right;
+    position: absolute;
+    right: 100px;
+    top: 0;
 }
 
 
 .header .menu li {
     float: left;
     list-style-type: none;
-    height: 80px;
+    height: 150px;
     display: block;
 }
 
@@ -100,7 +185,7 @@ body {
     font-weight: bold;
     display: block;
     line-height: 30px;
-    margin-top: 25px;
+    margin-top: 45px;
 
 }
 
@@ -120,31 +205,24 @@ body {
 .header .menu li .login:hover {
     border-radius: 15px;
     border-color: white;
-    color: #E51363;
+    color: #F83C92;
     background-color: white;
     border-style: solid;
     border-width: 1px;
 }
 
 
+
+
+
 .card {
-    width: 1200px;
-    background: rgb(255, 255, 255);
-    overflow: hidden;
-    border-radius: 20px;
     /*水平居中*/
-    position: absolute;
-    box-shadow: 10px 10px 10px 10px rgba(0.1, 0.1, 0.1, 0.1);
-    font-weight: 500;
-    padding-bottom: 50px;
-    letter-spacing: -.5px;
-    margin-bottom: 50px;
-    text-align: center;
 }
 
 .card .left {
-    width: 50%;
+    width: 45%;
     float: left;
+    margin-left: 5%;
     text-align: center;
 }
 
@@ -152,6 +230,12 @@ body {
     padding-top: 40px;
 }
 
+.body {
+    width: 100%;
+    height: 100%;
+    margin: auto;
+
+}
 
 .card .left .p-receive {
     font-family: Inter, sans-serif;
@@ -161,7 +245,7 @@ body {
 }
 
 .card .left .p-receive .span-receive {
-    color: #ff0d6a;
+    color: #F83C92;
     margin-top: 10px;
 }
 
@@ -177,7 +261,6 @@ body {
 
 .card .left .div-address {
     margin-top: 20px;
-    background-color: #f7fafc;
     padding: 10px 20px;
     border-radius: 10px;
     margin-left: 50px;
@@ -193,16 +276,17 @@ body {
 .card .left .p-address {
     margin-top: 10px;
     font-size: 18px;
-    color: #ff0d6a;
+    color: #F83C92;
 }
 
 /*====================*/
 .card .right {
-    width: 50%;
+    width: 45%;
     height: 100%;
     text-align: center;
     line-height: 100%;
     float: right;
+    margin-right: 5%;
 }
 
 
@@ -212,7 +296,7 @@ body {
 }
 
 .span-balance {
-    color: #ff0d6a;
+    color: #F83C92;
     font-size: 24px;
 
 }
@@ -233,7 +317,7 @@ body {
     text-align: left;
     font-size: 20px;
     line-height: 44px;
-    color: #f72a6f;
+    color: #F83C92;
 }
 
 .contracts {
@@ -279,12 +363,12 @@ body {
 .card .start > a {
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(116deg, #5E3AFF 0%, #F7296E 90%);
+    background-image: linear-gradient(116deg, #F83C92 0%, #F83C92 90%);
     border-radius: 23px;
     line-height: 45px;
     color: white;
     font-size: 16px;
-    margin-top: 20px;
+    margin-top: 30px;
     letter-spacing: 1.2px;
     text-align: center;
     text-decoration: none;
