--- a/views/tokens_create.html
+++ b/views/tokens_create.html
@@ -42,23 +42,30 @@
     }
 </style>
 <body>
+<div class="bg">
+    <img class="bg1 animated  flipInX delay-2s" src="../static/img/index_bg1.png" alt=""/>
+    <img class="bg2 animated  rotateIn delay-1s" src="../static/img/index_bg2.png" alt=""/>
+    <img class="bg3 animated  flipInX delay-2s" src="../static/img/index_bg3.png" alt=""/>
+    <img class="bg4 animated  rotateIn delay-1s" src="../static/img/index_bg4.png" alt=""/>
 
-<div class="div-bg">
-    <div class="bg"></div>
+    <div class="bg7 animated  flipInX delay-2s"></div>
+    <div class="bg8 animated  flipInX delay-2s"></div>
+
 </div>
 
-<div class="body">
-    <div class="header">
-        <div class="logo">
-            <img src="../static/img/android-chrome-256x256.png" alt="">
-        </div>
-        <div class="menu">
-            <ul>
-                <li><a href="https://www.showdoc.cc/AEASY" target="_blank">DOCUMENT</a></li>
-                <li><a id="go-logout" class="login" href="#">LOGOUT</a></li>
-            </ul>
-        </div>
+<div class="header  animated 1 fadeInDown delay-0s slow">
+    <img src="../static/img/login_header.png">
+
+    <div class="menu">
+        <ul>
+            <li><a href="https://www.showdoc.cc/AEASY" target="_blank">DOCUMENT</a></li>
+            <li><a id="go-logout" class="login" href="#">LOGOUT</a></li>
+        </ul>
     </div>
+</div>
+
+
+<div class="body">
 
 
     <div class="card">
@@ -84,21 +91,7 @@
             </div>
 
         </div>
-        <div class="right">
-            <p class="private-title" style="margin-top: 40px">REQUIREDS</p>
-            <p class="private">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AEASY to distribute your own tokens, the current
-                issued currency name is less than 5 characters, the amount is less than 999999999999, and it is not
-                allowed to use the stock for illegal ACTS or fraud, . The cost of creating tokens is 0ae. We also provide
-                a complete set of apis that allow you to use functions such as money transfers. Just use the account
-                appid and appSecret. The token created with AEASY will display the currency on the BOXAEPP wallet for
-                free, and will have the transfer function.
-                <br/><br/>
 
-                <span class="bonus">
-                    Bonus mechanism:  To be determined<br/>
-                <br/>
-                    <br/>
-              </span></p>
         </div>
 
     </div>
