--- a/static/css/login.css
+++ b/static/css/login.css
@@ -8,10 +8,12 @@
 html {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 body {
     width: 100%;
+    overflow: hidden;
     height: 100%;
     background: #F5F5F5;
 }
@@ -34,21 +36,12 @@ li {
 /*    border-radius: 10px;*/
 /*    box-shadow: 10px 10px 10px 10px rgba(0.1, 0.1, 0.1, 0.1);*/
 /*}*/
-.logo {
-    width: 200px;
-    line-height: 80px;
-    float: left;
-    font-size: 22px;
-    font-weight: bold;
-    position: absolute;
-    font-family: Roboto-Black, serif;
+.header{
+    z-index: 999;
 }
 
-.logo img {
-    width: 100px;
-    height: 100px;
-    margin-top: -10px;
-    margin-left: 40px;
+.header img{
+    width: 100%;
 }
 
 
@@ -71,20 +64,129 @@ li {
 
 }
 
+
+ .bg {
+     width: 100%;
+     height: 100%;
+    z-index: -1;
+    overflow: hidden;
+}
+
+ .bg .bg1 {
+    height: 110px;
+    z-index: -1;
+    left: 177px;
+    top: 408px;
+    position: absolute;
+}
+
+
+ .bg .bg2 {
+    width: 45px;
+    height: 45px;
+    top: 150px;
+    left: 344px;
+    z-index: -1;
+    position: absolute;
+}
+
+ .bg .bg3 {
+    width: 174px;
+    height: 174px;
+    z-index: -1;
+    top: 203px;
+    right:189px;
+    position: absolute;
+}
+
+ .bg .bg4 {
+    width: 25px;
+    height: 25px;
+    z-index: -1;
+    top: 506px;
+    right: 348px;
+    position: absolute;
+}
+
+.bg5 {
+    width: 589px;
+    height: 352px;
+    z-index: -1;
+    top: 301px;
+    right: -290px;
+    position: absolute;
+    background-image: linear-gradient(129deg, #E71766 0%, #FF4D90 100%);
+    border-radius: 83px 0px 0px 83px;
+}
+
+.bg6 {
+    width: 589px;
+    height: 352px;
+    z-index: -1;
+    top: 301px;
+    right: -290px;
+    position: absolute;
+    background-image: linear-gradient(129deg, #E71766 0%, #FF4D90 100%);
+    border-radius: 83px 0px 0px 83px;
+}
+
+ .bg .bg6 {
+    width: 184px;
+    height: 17px;
+    z-index: -1;
+    opacity: 0.1;
+    top: 260px;
+    background-image: linear-gradient(-39deg, #FF498E 0%, #E513A6 100%);
+    left: 160px;
+    position: absolute;
+}
+
+ .bg .bg7 {
+    width: 17px;
+    height: 17px;
+    z-index: -1;
+    top: 434px;
+    right: 614px;
+    opacity: 0.9;
+    transform: rotate(169deg);
+    background: #50E3C2;
+    border-radius: 17px;
+    position: absolute;
+}
+
+ .bg .bg8 {
+    width: 32px;
+    height: 32px;
+    z-index: -1;
+    top: 589px;
+    right: 754px;
+    transform: rotate(169deg);
+    background: #19A3FF;
+    position: absolute;
+    border-radius: 32px;
+}
+
+
+
 .banner {
     width: 65%;
     height: 100%;
-    background-image: linear-gradient(116deg, #5E3AFF 00%, #F7296E 80%);
+
+    background-image: linear-gradient(116deg, #F83C92 00%, #F83C92 80%);
 
 }
 
 .content {
-    width: 35%;
-    height: 100%;
+    width: 500px;
+    height: 500px;
+    position: absolute;
+    left: 50%;
+    top: 180px;
+    z-index: 998;
+    margin-left: -250px;
 }
 
 .content .div-login {
-    margin-top: 130px;
     margin-left: 60px;
     margin-right: 60px;
     overflow: hidden;
@@ -106,7 +208,7 @@ li {
 }
 
 .content .div-login .register {
-    color: #f72a6f;
+    color: #F83C92;
 
 }
 
@@ -172,7 +274,7 @@ li {
 .content .div-login .login {
     width: 100%;
     height: 45px;
-    background-image: linear-gradient(116deg, #5E3AFF 0%, #F7296E 90%);
+    background-image: linear-gradient(116deg, #F83C92 0%, #F83C92 90%);
     border-radius: 23px;
     color: white;
     font-size: 16px;
@@ -188,9 +290,9 @@ li {
 /*=====================================================*/
 
 .content .div-register {
-    margin-top: 80px;
     margin-left: 60px;
     margin-right: 60px;
+    margin-top: -20px;
     overflow: hidden;
 }
 
@@ -262,7 +364,7 @@ li {
 .content .div-register .div-captcha .a-captcha {
     width: 30%;
     height: 44px;
-    background-image: linear-gradient(116deg, #5E3AFF 0%, #F7296E 90%);
+    background-image: linear-gradient(116deg, #F83C92 0%, #F83C92 90%);
     border-radius: 23px;
     color: white;
     font-size: 16px;
@@ -305,7 +407,7 @@ li {
 .content .div-register .register {
     width: 100%;
     height: 45px;
-    background-image: linear-gradient(116deg, #5E3AFF 0%, #F7296E 90%);
+    background-image: linear-gradient(116deg, #F83C92 0%, #F83C92 90%);
     border-radius: 23px;
     color: white;
     font-size: 16px;
