--- a/static/css/tokens_create.css
+++ b/static/css/tokens_create.css
@@ -7,7 +7,118 @@
 body {
     width: 100%;
     height: 100%;
+    overflow: hidden;
+}
 
+.bg {
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    overflow: hidden;
+    background: #1F9CFF;
+}
+
+.bg .bg1 {
+    height: 110px;
+    z-index: -1;
+    left: 47px;
+    top: 488px;
+    position: absolute;
+}
+
+
+.bg .bg2 {
+    width: 45px;
+    height: 45px;
+    top: 150px;
+    left: 544px;
+    z-index: -1;
+    position: absolute;
+}
+
+.bg .bg3 {
+    width: 174px;
+    height: 174px;
+    z-index: -1;
+    top: 203px;
+    right: 189px;
+    position: absolute;
+}
+
+.bg .bg4 {
+    width: 25px;
+    height: 25px;
+    z-index: -1;
+    top: 506px;
+    right: 348px;
+    position: absolute;
+}
+
+.bg5 {
+    width: 589px;
+    height: 352px;
+    z-index: -1;
+    top: 301px;
+    right: -290px;
+    position: absolute;
+    background-image: linear-gradient(129deg, #E71766 0%, #FF4D90 100%);
+    border-radius: 83px 0px 0px 83px;
+}
+
+.bg6 {
+    width: 589px;
+    height: 352px;
+    z-index: -1;
+    top: 301px;
+    right: -290px;
+    position: absolute;
+    background-image: linear-gradient(129deg, #E71766 0%, #FF4D90 100%);
+    border-radius: 83px 0px 0px 83px;
+}
+
+.bg .bg6 {
+    width: 184px;
+    height: 17px;
+    z-index: -1;
+    opacity: 0.1;
+    top: 260px;
+    background-image: linear-gradient(-39deg, #FF498E 0%, #E513A6 100%);
+    left: 160px;
+    position: absolute;
+}
+
+.bg .bg7 {
+    width: 17px;
+    height: 17px;
+    z-index: -1;
+    top: 434px;
+    right: 614px;
+    opacity: 0.9;
+    transform: rotate(169deg);
+    background: #50E3C2;
+    border-radius: 17px;
+    position: absolute;
+}
+
+.bg .bg8 {
+    width: 32px;
+    height: 32px;
+    z-index: -1;
+    top: 589px;
+    right: 754px;
+    transform: rotate(169deg);
+    background: #19A3FF;
+    position: absolute;
+    border-radius: 32px;
+}
+
+
+.header {
+    z-index: 999;
+}
+
+.header img {
+    width: 100%;
 }
 
 .div-bg {
@@ -43,24 +154,21 @@ body {
 
 
 .body {
-    width: 1200px;
+    width: 100%;
     height: 100%;
     margin: auto;
 }
 
-.header {
-    width: 100%;
-    height: 80px;
-    overflow: hidden;
-}
+
+
 
 .header .logo {
     width: 200px;
     line-height: 80px;
     float: left;
     font-size: 22px;
+    z-index: 1;
     font-weight: bold;
-    z-index: -1;
     margin-left: 5px;
     font-family: Roboto-Black, serif;
 }
@@ -70,20 +178,22 @@ body {
     height: 100px;
     margin-top: -10px;
     margin-left: -20px;
-    z-index: -1;
 }
 
 
 .header .menu {
-    height: 80px;
+    height: 150px;
     float: right;
+    position: absolute;
+    right: 100px;
+    top: 0;
 }
 
 
 .header .menu li {
     float: left;
     list-style-type: none;
-    height: 80px;
+    height: 150px;
     display: block;
 }
 
@@ -100,7 +210,7 @@ body {
     font-weight: bold;
     display: block;
     line-height: 30px;
-    margin-top: 25px;
+    margin-top: 45px;
 
 }
 
@@ -120,33 +230,31 @@ body {
 .header .menu li .login:hover {
     border-radius: 15px;
     border-color: white;
-    color: #E51363;
+    color: #F83C92;
     background-color: white;
     border-style: solid;
     border-width: 1px;
 }
 
 
+
+
 .card {
-    width: 1200px;
-    height: 530px;
+    width: 100%;
     background: rgb(255, 255, 255);
     overflow: hidden;
-    border-radius: 20px;
     /*水平居中*/
-    position: absolute;
-    box-shadow: 10px 10px 10px 10px rgba(0.1, 0.1, 0.1, 0.1);
     font-weight: 500;
     letter-spacing: -.5px;
-    margin-bottom: 50px;
     text-align: center;
+    margin-bottom: 50px;
+
 }
 
 .card .left {
-    width: 50%;
     height: 100%;
-    float: left;
     text-align: center;
+    margin: auto 0;
 }
 
 .card .left .title {
@@ -162,7 +270,7 @@ body {
 }
 
 .card .left .p-receive .span-receive {
-    color: #ff0d6a;
+    color: #FF4D90;
     margin-top: 10px;
 }
 
@@ -197,16 +305,7 @@ body {
 .card .left .p-address {
     margin-top: 10px;
     font-size: 18px;
-    color: #ff0d6a;
-}
-
-/*====================*/
-.card .right {
-    width: 50%;
-    height: 100%;
-    text-align: center;
-    line-height: 100%;
-    float: right;
+    color: #FF4D90;
 }
 
 
@@ -216,8 +315,8 @@ body {
 }
 
 .span-balance {
-    color: #ff0d6a;
-    font-size: 24px;
+    color: #FF4D90;
+    font-size: 44px;
 
 }
 
@@ -245,7 +344,7 @@ body {
 
 .p-hint {
     width: 400px;
-    height: 44px;
+    height: 24px;
     text-align: left;
     color: #a8a8a8;
     font-size: 14px;
@@ -277,7 +376,7 @@ body {
 .card .start > a {
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(116deg, #5E3AFF 0%, #F7296E 90%);
+    background-image: linear-gradient(116deg, #FF4D90 0%, #FF4D90 90%);
     border-radius: 23px;
     line-height: 45px;
     color: white;
