--- a/views/user.html
+++ b/views/user.html
@@ -8,27 +8,35 @@
     <script type="text/javascript" src="../static/js/jquery.qrcode.min.js"></script>
     <script type="text/javascript"
             src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.6/dist/loadingoverlay.min.js"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <script type="text/javascript" src="../static/js/ui.js"></script>
 
     <title>AEasy SDK official website | allows you to quickly, conveniently, complete the development of pp block chain
         technology</title>
 </head>
 <body>
+<div class="bg">
+    <img class="bg1 animated  flipInX delay-2s" src="../static/img/index_bg1.png" alt=""/>
+    <img class="bg2 animated  rotateIn delay-1s" src="../static/img/index_bg2.png" alt=""/>
+    <img class="bg3 animated  flipInX delay-2s" src="../static/img/index_bg3.png" alt=""/>
+    <img class="bg4 animated  rotateIn delay-1s" src="../static/img/index_bg4.png" alt=""/>
 
-<div class="bg"></div>
-<div class="body">
-    <div class="header">
-        <div class="logo">
-            <img src="../static/img/android-chrome-256x256.png" alt="">
-        </div>
-        <div class="menu">
-            <ul>
-                <li><a href="https://www.showdoc.cc/AEASY" target="_blank">DOCUMENT</a></li>
-                <li><a id="go-logout" class="login" href="#">LOGOUT</a></li>
-            </ul>
-        </div>
+    <div class="bg7 animated  flipInX delay-2s"></div>
+    <div class="bg8 animated  flipInX delay-2s"></div>
+
+</div>
+<div class="header  animated 1 fadeInDown delay-0s slow">
+    <img src="../static/img/login_header.png">
+
+    <div class="menu">
+        <ul>
+            <li><a href="https://www.showdoc.cc/AEASY" target="_blank">DOCUMENT</a></li>
+            <li><a id="go-logout" class="login" href="#">LOGOUT</a></li>
+        </ul>
     </div>
+</div>
+<div class="body">
+
 
     <div class="card">
         <div class="left">
@@ -75,7 +83,6 @@
 
 
     </div>
-    <p class="p-service">Contact customer service for questions <span>WeChat: s283122529</span></p>
 
 
 </div>
